--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -18,7 +18,7 @@
     <tbody>
       <% @books.each do |book|%>
         <tr>
-					<td><%= attachment_image_tag book.user, :profile_image, :fill, 40, 40, format: 'jpeg',fallback: "no_image.jpg" ,size:'50x50'%></td>
+					<td><%= attachment_image_tag book.user ,:profile_image,:fill, 40, 40, format: 'jpeg',fallback: "no_image.jpg" ,size:'50x50'%>
           <td><%= link_to book.title,book_path(book) %></td>
           <td><%= book.body %></td>
         </tr>  
