--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,12 +3,13 @@
 <%= render 'books/list', books: @books %>
 
 <div class="col-xs-9">
-	<h2>Books</h2>
+	<h2>Book detail</h2>
   <table class="table table-striped">
 
     <tbody>
         <tr>
-		      <td><%= attachment_image_tag @book.user, :profile_image, :fill, 40, 40, format: 'jpeg',fallback: "no_image.jpg" ,size:'50x50'%></td>
+		      <td><%= link_to attachment_image_tag @book.user,:profile_image, :fill, 40, 40, format: 'jpeg',fallback: "no_image.jpg" ,size:'50x50'%><br>
+          <%=link_to @book.user.name ,user_path(@book.user) %></td>
           <td><%= @book.title %></td>
           <td><%= @book.body %></td>
           <% if user_signed_in? && @book.user_id==current_user.id %>
