--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
                 <li><%= link_to " Home", user_path(current_user.id),class:"glyphicon glyphicon-home"%></li>
                 <li><%= link_to " Users", users_path,class:"glyphicon glyphicon-user"%></li>
                 <li><%= link_to " Books", books_path,class:"glyphicon glyphicon-book"%></li>
-                <li><%= link_to " logout", user_registration_path,method: :delete,class:"glyphicon glyphicon-log-out"%></li>
+                <li><%= link_to " logout", destroy_user_session_path,class:"glyphicon glyphicon-log-out"%></li>
               <% else %>
                 <li><%= link_to " Home", root_path,class:"glyphicon glyphicon-home"%></li>
                 <li><%= link_to " About", home_about_path,class:"glyphicon glyphicon-link"%></li>
