--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,4 @@
+<h1>User info</h1>
 <%= form_for(@user) do |f| %>
     <div class="form-group has-icon">
         <label class="control-label sr-only" for="inputEmail">Name</label>
@@ -6,6 +7,6 @@
     </div>          
     
     <%= f.attachment_field :profile_image, placeholder: "プロフィール画像", class: "user-edit-form" %>            
-    <%= f.text_area :introduction, placeholder:"自己紹介 最大５０文字"%>
+    <p>intoroduction<%= f.text_area :introduction, placeholder:"自己紹介 最大５０文字"%></p>
     <%= f.submit "変更を保存"%>
 <% end %>
