--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,7 +16,10 @@
     <tbody>
       <% @user.books.each do |book|%>
         <tr>
-		    	<td><%= attachment_image_tag book.user, :profile_image, :fill, 40, 40, format: 'jpeg',class: "member-img",fallback: "no_image.jpg",size:'50x50' %></td>
+		    	<td><%= link_to user_path(book.user_id) do %>
+          <%= attachment_image_tag book.user, :profile_image, :fill, 40, 40, format: 'jpeg',class: "member-img",fallback: "no_image.jpg",size:'50x50' %>
+          <%end%>
+          </td>
           <td><%= link_to book.title,book_path(book) %></td>
           <td><%= book.body %></td>
         </tr>  
