--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 <div class="row">
-<%= render 'books/list', books: @books %>
+<%= render 'books/list', books: @books ,user: @user,book:@book%>
 
 <div class="col-xs-9">
     <h2>Users</h2>
