--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,21 +1,21 @@
 <div class="col-xs-3">
     <h1>User info</h1>
-        <%= attachment_image_tag current_user, :profile_image, :fill, 40, 40, format: 'jpeg', class: "profile-img", fallback: "no_image.jpg" ,size:'150x150'%>
+        <%= attachment_image_tag user, :profile_image, :fill, 40, 40, format: 'jpeg', class: "profile-img", fallback: "no_image.jpg" ,size:'150x150'%>
     <table class="table">
         <tr>
             <td><p>name</p></td>
-            <td><p><%= current_user.name%></p></td>
+            <td><p><%= user.name%></p></td>
         </tr>
         <tr>
             <td><p>introduction</p></td>
-            <td><p><%= current_user.introduction%></p></td>
+            <td><p><%= user.introduction%></p></td>
         </tr>
     </table>
-
-    <p><%= link_to "プロフィール編集", edit_user_path(current_user), class:"btn btn-default btn-block" %></p><br>
+    
+    <p><%= link_to "プロフィール編集", edit_user_path(user), class:"btn btn-default btn-block" %></p><br>
 
     <h2>New book</h2>
-    <%= form_for(@book) do |f| %>    
+    <%= form_for(book) do |f| %>    
       <h5>Title</h5>
         <div class="form-group">
             <%= f.text_field :title, class:"form-control"%>
