--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 <div class="row">
 
-  <%= render 'books/list', books: @books %>
+  <%= render 'books/list', books: @books,user:@user ,book:@book%>
 
 
 <div class="col-xs-9">
@@ -18,7 +18,10 @@
     <tbody>
       <% @books.each do |book|%>
         <tr>
-					<td><%= attachment_image_tag book.user ,:profile_image,:fill, 40, 40, format: 'jpeg',fallback: "no_image.jpg" ,size:'50x50'%>
+					<td><%= link_to user_path(book.user_id) do %>
+            <%= attachment_image_tag book.user ,:profile_image,:fill, 40, 40, format: 'jpeg',fallback: "no_image.jpg" ,size:'50x50'%>
+            <% end %>
+          </td>
           <td><%= link_to book.title,book_path(book) %></td>
           <td><%= book.body %></td>
         </tr>  
