--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 <div class="row">
-<%= render 'books/list', books: @books %>
+<%= render 'books/list', books: @books ,user: @user,book:@newbook%>
 
 <div class="col-xs-9">
 	<h2>Book detail</h2>
