--- a/app/views/books/top.html.erb
+++ b/app/views/books/top.html.erb
@@ -8,7 +8,7 @@
 		about various books!
 	</p>
 <%= link_to "Log in", new_user_session_path, class:"btn btn-primary btn-block"%>
-<%= link_to "Sign up", new_user_registration_path, class:"btn btn-success btn-block"%>
+<%= link_to "Sign Up", new_user_registration_path, class:"btn btn-success btn-block"%>
 </div>
 </div>
 </div>
