--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -8,5 +8,5 @@
     
     <%= f.attachment_field :profile_image, placeholder: "プロフィール画像", class: "user-edit-form" %>            
     <p>intoroduction<%= f.text_area :introduction, placeholder:"自己紹介 最大５０文字"%></p>
-    <%= f.submit "変更を保存"%>
+    <%= f.submit "Update User"%>
 <% end %>
